# madgwick_filter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
inc/: madgwick.h  quaternions.h
src/: madgwick.c  quaternions.c
